g1 demo show